Convert okhttp-sse to Kotlin

--- a/okhttp-sse/build.gradle
+++ b/okhttp-sse/build.gradle
@@ -16,3 +16,18 @@ dependencies {
   testImplementation deps.assertj
   testCompileOnly deps.jsr305
 }
+
+apply plugin: 'me.champeau.gradle.japicmp'
+task japicmp(type: me.champeau.gradle.japicmp.JapicmpTask, dependsOn: 'jar') {
+  oldClasspath = files(baselineJar(project, baselineVersion))
+  newClasspath = files(jar.archivePath)
+  onlyBinaryIncompatibleModified = true
+  failOnModification = true
+  txtOutputFile = file("$buildDir/reports/japi.txt")
+  ignoreMissingClasses = true
+  includeSynthetic = true
+  packageExcludes = [
+      'okhttp3.internal.sse',
+  ]
+}
+check.dependsOn(japicmp)
