--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,4 +5,9 @@ jobs:
       - image: circleci/openjdk:8u171-jdk
     steps:
       - checkout
+      - run:
+          name: "Pull Submodules"
+          command: |
+            git submodule init
+            git submodule update --remote      
       - run: mvn test
