--- a/okhttp-testing-support/build.gradle
+++ b/okhttp-testing-support/build.gradle
@@ -2,5 +2,7 @@ dependencies {
   api project(':okhttp')
   api deps.junit
   api deps.assertj
+  api deps.conscrypt
+  
   compileOnly deps.jsr305
 }
