Avoid errorprone in JDK12

--- a/build.gradle
+++ b/build.gradle
@@ -152,6 +152,7 @@ subprojects { project ->
     options.errorprone {
       check("MissingFail", CheckSeverity.ERROR)
       check("MissingOverride", CheckSeverity.ERROR)
+      enabled = JavaVersion.current() < JavaVersion.VERSION_11
     }
   }
 
