Update Japicmp excludes

--- a/mockwebserver/build.gradle
+++ b/mockwebserver/build.gradle
@@ -24,5 +24,8 @@ task japicmp(type: me.champeau.gradle.japicmp.JapicmpTask, dependsOn: 'jar') {
   txtOutputFile = file("$buildDir/reports/japi.txt")
   ignoreMissingClasses = true
   includeSynthetic = true
+  packageExcludes = [
+      'okhttp3.mockwebserver.internal',
+  ]        
 }
 check.dependsOn(japicmp)
