--- a/okhttp-tests/pom.xml
+++ b/okhttp-tests/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>com.squareup.okhttp3</groupId>
     <artifactId>parent</artifactId>
-    <version>3.12.3</version>
+    <version>3.12.4-SNAPSHOT</version>
   </parent>
 
   <artifactId>okhttp-tests</artifactId>
