--- a/samples/simple-client/pom.xml
+++ b/samples/simple-client/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>com.squareup.okhttp3.sample</groupId>
     <artifactId>sample-parent</artifactId>
-    <version>3.12.3</version>
+    <version>3.12.4-SNAPSHOT</version>
   </parent>
 
   <artifactId>simple-client</artifactId>
