Convert MockResponse to Kotlin (#5018)
* Rename MockResponse to Kotlin

* Convert MockResponse to Kotlin

* Fix DuplexTest failed

* Fix code

* Fix and use expression function

--- a/mockwebserver/build.gradle
+++ b/mockwebserver/build.gradle
@@ -46,6 +46,44 @@ task japicmp(type: me.champeau.gradle.japicmp.JapicmpTask, dependsOn: 'jar') {
       'okhttp3.mockwebserver.PushPromise#method()',
       'okhttp3.mockwebserver.PushPromise#path()',
       'okhttp3.mockwebserver.PushPromise#response()',
+      'okhttp3.mockwebserver.MockResponse#addHeader(java.lang.String)',
+      'okhttp3.mockwebserver.MockResponse#addHeader(java.lang.String, java.lang.Object)',
+      'okhttp3.mockwebserver.MockResponse#addHeaderLenient(java.lang.String, java.lang.Object)',
+      'okhttp3.mockwebserver.MockResponse#clearHeaders()',
+      'okhttp3.mockwebserver.MockResponse#getBody()',
+      'okhttp3.mockwebserver.MockResponse#getBodyDelay(java.util.concurrent.TimeUnit)',
+      'okhttp3.mockwebserver.MockResponse#getDuplexResponseBody()',
+      'okhttp3.mockwebserver.MockResponse#getHeadersDelay(java.util.concurrent.TimeUnit)',
+      'okhttp3.mockwebserver.MockResponse#getHttp2ErrorCode()',
+      'okhttp3.mockwebserver.MockResponse#getPushPromises()',
+      'okhttp3.mockwebserver.MockResponse#getSettings()',
+      'okhttp3.mockwebserver.MockResponse#getSocketPolicy()',
+      'okhttp3.mockwebserver.MockResponse#getStatus()',
+      'okhttp3.mockwebserver.MockResponse#getThrottleBytesPerPeriod()',
+      'okhttp3.mockwebserver.MockResponse#getThrottlePeriod(java.util.concurrent.TimeUnit)',
+      'okhttp3.mockwebserver.MockResponse#getTrailers()',
+      'okhttp3.mockwebserver.MockResponse#getWebSocketListener()',
+      'okhttp3.mockwebserver.MockResponse#removeHeader(java.lang.String)',
+      'okhttp3.mockwebserver.MockResponse#setBody(okio.Buffer)',
+      'okhttp3.mockwebserver.MockResponse#setBody(java.lang.String)',
+      'okhttp3.mockwebserver.MockResponse#setBodyDelay(long, java.util.concurrent.TimeUnit)',
+      'okhttp3.mockwebserver.MockResponse#setChunkedBody(okio.Buffer, int)',
+      'okhttp3.mockwebserver.MockResponse#setChunkedBody(java.lang.String, int)',
+      'okhttp3.mockwebserver.MockResponse#setHeader(java.lang.String, java.lang.Object)',
+      'okhttp3.mockwebserver.MockResponse#setHeaders(okhttp3.Headers)',
+      'okhttp3.mockwebserver.MockResponse#setHeadersDelay(long, java.util.concurrent.TimeUnit)',
+      'okhttp3.mockwebserver.MockResponse#setHttp2ErrorCode(int)',
+      'okhttp3.mockwebserver.MockResponse#setResponseCode(int)',
+      'okhttp3.mockwebserver.MockResponse#setSocketPolicy(okhttp3.mockwebserver.SocketPolicy)',
+      'okhttp3.mockwebserver.MockResponse#setTrailers(okhttp3.Headers)',
+      'okhttp3.mockwebserver.MockResponse#throttleBody(long, long, java.util.concurrent.TimeUnit)',
+      'okhttp3.mockwebserver.MockResponse#withPush(okhttp3.mockwebserver.PushPromise)',
+      'okhttp3.mockwebserver.MockResponse#withSettings(okhttp3.internal.http2.Settings)',
+      'okhttp3.mockwebserver.MockResponse#withWebSocketUpgrade(okhttp3.WebSocketListener)',
+      'okhttp3.mockwebserver.MockResponse#getHeaders()',
+      'okhttp3.mockwebserver.MockResponse#setStatus(java.lang.String)',
+      'okhttp3.mockwebserver.MockResponse#isDuplex()',
+      'okhttp3.mockwebserver.MockResponse#setBody(okhttp3.mockwebserver.internal.duplex.DuplexResponseBody)',
   ]
 }
 check.dependsOn(japicmp)
