Convert MockWebServer to Kotlin

--- a/mockwebserver/build.gradle
+++ b/mockwebserver/build.gradle
@@ -84,6 +84,29 @@ task japicmp(type: me.champeau.gradle.japicmp.JapicmpTask, dependsOn: 'jar') {
       'okhttp3.mockwebserver.MockResponse#setStatus(java.lang.String)',
       'okhttp3.mockwebserver.MockResponse#isDuplex()',
       'okhttp3.mockwebserver.MockResponse#setBody(okhttp3.mockwebserver.internal.duplex.DuplexResponseBody)',
+      'okhttp3.mockwebserver.MockWebServer#enqueue(okhttp3.mockwebserver.MockResponse)',
+      'okhttp3.mockwebserver.MockWebServer#getDispatcher()',
+      'okhttp3.mockwebserver.MockWebServer#getHostName()',
+      'okhttp3.mockwebserver.MockWebServer#getPort()',
+      'okhttp3.mockwebserver.MockWebServer#getRequestCount()',
+      'okhttp3.mockwebserver.MockWebServer#noClientAuth()',
+      'okhttp3.mockwebserver.MockWebServer#protocols()',
+      'okhttp3.mockwebserver.MockWebServer#requestClientAuth()',
+      'okhttp3.mockwebserver.MockWebServer#requireClientAuth()',
+      'okhttp3.mockwebserver.MockWebServer#setBodyLimit(long)',
+      'okhttp3.mockwebserver.MockWebServer#setDispatcher(okhttp3.mockwebserver.Dispatcher)',
+      'okhttp3.mockwebserver.MockWebServer#setProtocolNegotiationEnabled(boolean)',
+      'okhttp3.mockwebserver.MockWebServer#setProtocols(java.util.List)',
+      'okhttp3.mockwebserver.MockWebServer#setServerSocketFactory(javax.net.ServerSocketFactory)',
+      'okhttp3.mockwebserver.MockWebServer#shutdown()',
+      'okhttp3.mockwebserver.MockWebServer#start()',
+      'okhttp3.mockwebserver.MockWebServer#start(int)',
+      'okhttp3.mockwebserver.MockWebServer#start(java.net.InetAddress, int)',
+      'okhttp3.mockwebserver.MockWebServer#takeRequest()',
+      'okhttp3.mockwebserver.MockWebServer#takeRequest(long, java.util.concurrent.TimeUnit)',
+      'okhttp3.mockwebserver.MockWebServer#toProxyAddress()',
+      'okhttp3.mockwebserver.MockWebServer#url(java.lang.String)',
+      'okhttp3.mockwebserver.MockWebServer#useHttps(javax.net.ssl.SSLSocketFactory, boolean)',
   ]
 }
 check.dependsOn(japicmp)
