API change: Make OkHttpClient accessors final
If we want these to be vals to Kotlin, they can't be open. I think the
motivation to make these non-final was pretty weak, and I don't mind
breaking API compatibility here.

--- a/okhttp/build.gradle
+++ b/okhttp/build.gradle
@@ -354,6 +354,33 @@ task japicmp(type: me.champeau.gradle.japicmp.JapicmpTask, dependsOn: 'jar') {
       'okhttp3.Route#requiresTunnel()',
       'okhttp3.Route#socketAddress()',
       'okhttp3.TlsVersion#javaName()',
+      // Real API change! Became 'final' despite a non-final enclosing class in 4.0.0:
+      'okhttp3.OkHttpClient#authenticator()',
+      'okhttp3.OkHttpClient#cache()',
+      'okhttp3.OkHttpClient#callTimeoutMillis()',
+      'okhttp3.OkHttpClient#certificatePinner()',
+      'okhttp3.OkHttpClient#connectionPool()',
+      'okhttp3.OkHttpClient#connectionSpecs()',
+      'okhttp3.OkHttpClient#connectTimeoutMillis()',
+      'okhttp3.OkHttpClient#cookieJar()',
+      'okhttp3.OkHttpClient#dispatcher()',
+      'okhttp3.OkHttpClient#dns()',
+      'okhttp3.OkHttpClient#eventListenerFactory()',
+      'okhttp3.OkHttpClient#followRedirects()',
+      'okhttp3.OkHttpClient#followSslRedirects()',
+      'okhttp3.OkHttpClient#hostnameVerifier()',
+      'okhttp3.OkHttpClient#interceptors()',
+      'okhttp3.OkHttpClient#networkInterceptors()',
+      'okhttp3.OkHttpClient#pingIntervalMillis()',
+      'okhttp3.OkHttpClient#protocols()',
+      'okhttp3.OkHttpClient#proxy()',
+      'okhttp3.OkHttpClient#proxyAuthenticator()',
+      'okhttp3.OkHttpClient#proxySelector()',
+      'okhttp3.OkHttpClient#readTimeoutMillis()',
+      'okhttp3.OkHttpClient#retryOnConnectionFailure()',
+      'okhttp3.OkHttpClient#socketFactory()',
+      'okhttp3.OkHttpClient#sslSocketFactory()',
+      'okhttp3.OkHttpClient#writeTimeoutMillis()',
   ]
 }
 check.dependsOn(japicmp)
