--- a/okcurl/graal.config
+++ b/okcurl/graal.config
@@ -6,7 +6,8 @@
 -H:+SpawnIsolates \
 -H:+ReportExceptionStackTraces \
 -H:+StackTrace \
--Dfile.encoding=UTF-8
---enable-http
---enable-https
+-H:+AddAllCharsets \
+-Dfile.encoding=UTF-8 \
+--enable-http \
+--enable-https \
 -H:ReflectionConfigurationFiles=reflect.config
