Tweak the MkDocs build
Retain the 3.x docs by doing a dirty MkDocs build
Build more Dokka projects

--- a/okhttp-tls/build.gradle
+++ b/okhttp-tls/build.gradle
@@ -18,6 +18,13 @@ dependencies {
   testImplementation deps.assertj
 }
 
+afterEvaluate { project ->
+  project.tasks.dokka {
+    outputDirectory = "$rootDir/docs/api"
+    outputFormat = 'gfm'
+  }
+}
+
 task japicmp(type: me.champeau.gradle.japicmp.JapicmpTask, dependsOn: 'jar') {
   oldClasspath = files(baselineJar(project, baselineVersion))
   newClasspath = files(jar.archivePath)
