--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -47,4 +47,20 @@ nav:
   - 'Upgrading to OkHttp 4': upgrading_to_okhttp_4.md
   - 'Works with OkHttp': works_with_okhttp.md
   - 'Stack Overflow': https://stackoverflow.com/questions/tagged/okhttp?sort=active
-  - 'API Docs': api/okhttp/okhttp3/index.md
+  - '4.x API':
+    - 'okhttp': api/okhttp/okhttp3/index.md
+    - 'dnsoverhttps': api/okhttp-dnsoverhttps/okhttp3.dnsoverhttps/index.md
+    - 'logging-interceptor': api/okhttp-logging-interceptor/okhttp3.logging/index.md
+    - 'sse': api/okhttp-sse/okhttp3.sse/index.md
+    - 'tls': api/okhttp-tls/okhttp3.tls/index.md
+    - 'urlconnection': api/okhttp-urlconnection/okhttp3/index.md
+    - 'mockwebserver': api/mockwebserver/okhttp3.mockwebserver/index.md
+  - '3.x API':
+    - 'okhttp': https://square.github.io/okhttp/3.x/okhttp/
+    - 'dnsoverhttps': https://square.github.io/okhttp/3.x/okhttp-dnsoverhttps/
+    - 'logging-interceptor': https://square.github.io/okhttp/3.x/logging-interceptor/
+    - 'sse': https://square.github.io/okhttp/3.x/okhttp-sse/
+    - 'tls': https://square.github.io/okhttp/3.x/okhttp-tls/
+    - 'urlconnection': https://square.github.io/okhttp/3.x/okhttp-urlconnection/
+    - 'mockwebserver': https://square.github.io/okhttp/3.x/mockwebserver/
+
