Use cash-market as the font

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,6 +35,7 @@ markdown_extensions:
   - tables
 
 nav:
+  - 'Overview': index.md
   - 'Calls': calls.md
   - 'Connections': connections.md
   - 'Recipes': recipes.md
