--- a/mockwebserver/build.gradle
+++ b/mockwebserver/build.gradle
@@ -18,7 +18,7 @@ dependencies {
 
 afterEvaluate { project ->
   project.tasks.dokka {
-    outputDirectory = "$rootDir/docs/api"
+    outputDirectory = "$rootDir/docs/4.x"
     outputFormat = 'gfm'
   }
 }
