--- a/okhttp-tls/build.gradle
+++ b/okhttp-tls/build.gradle
@@ -20,7 +20,7 @@ dependencies {
 
 afterEvaluate { project ->
   project.tasks.dokka {
-    outputDirectory = "$rootDir/docs/api"
+    outputDirectory = "$rootDir/docs/4.x"
     outputFormat = 'gfm'
   }
 }
