--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -156,6 +156,7 @@ jobs:
 
   testjdk12:
     docker:
+      # best source of JDK 12 for now
       - image: circleci/dynamodb:12.0.1-jdk
 
     environment:
@@ -196,10 +197,7 @@ workflows:
               ignore:
                 - master
                 - gh-pages
-      - testjdk8:
-          filters:
-            branches:
-              only: master
+      - testjdk8
       - testjdk8alpn:
           filters:
             branches:
@@ -207,10 +205,7 @@ workflows:
                 - gh-pages
       - testjdk11
       - testjdk12
-      - testconscrypt:
-          filters:
-            branches:
-              only: master
+      - testconscrypt
   nightly:
     triggers:
       - schedule:
