--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -63,4 +63,5 @@ nav:
   - 'Change Log': changelog.md
   - 'Upgrading to OkHttp 4': upgrading_to_okhttp_4.md
   - 'Contributing': contributing.md
+  - 'Code of Conduct': code_of_conduct.md
 
