--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -154,21 +154,6 @@ jobs:
       - runtests:
           platform: jdk9
 
-  testjdk12:
-    docker:
-      # best source of JDK 12 for now
-      - image: circleci/dynamodb:12.0.1-jdk
-
-    environment:
-      JVM_OPTS: -Xmx1g
-      TERM: dumb
-
-    steps:
-      - checkout
-
-      - runtests:
-          platform: jdk9
-
   testconscrypt:
     docker:
       - image: circleci/openjdk:11.0.3-jdk-stretch
@@ -197,15 +182,23 @@ workflows:
               ignore:
                 - master
                 - gh-pages
-      - testjdk8
+      - testjdk8:
+          filters:
+            branches:
+              only: master
       - testjdk8alpn:
           filters:
             branches:
               ignore:
                 - gh-pages
-      - testjdk11
-      - testjdk12
-      - testconscrypt
+      - testjdk11:
+          filters:
+            branches:
+              only: master
+      - testconscrypt:
+          filters:
+            branches:
+              only: master
   nightly:
     triggers:
       - schedule:
