Parallelize tests based on available processors (#4902)
* Parallelize tests based on available processors

This brings down `:okhttp:test` (the biggest bottle neck) time on my local machine from ~2m11s to ~39s.

Build scans:
* Without parallelization: https://scans.gradle.com/s/nmjkdjflng4o4
* With parallelization: https://scans.gradle.com/s/3oebsmkfwetiy

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ jdk:
   - oraclejdk8
 
 script:
- - ./gradlew check
+ - ./gradlew check --parallel
 
 after_success:
   - .buildscript/deploy_snapshot.sh
