Run JDK12 nightly

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -239,6 +239,9 @@ workflows:
       - testjdk11:
           requires:
             - compile
+      - testjdk12:
+          requires:
+            - compile
       - testconscrypt:
           requires:
             - compile
