--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,8 @@
 rootProject.name = 'okhttp-parent'
 
 include ':mockwebserver'
-if (!properties.containsKey('android.injected.invoked.from.ide')) {
+if (!properties.containsKey('android.injected.invoked.from.ide') && System.getenv(
+        'ANDROID_SDK_ROOT') != null) {
   // Currently incompatible with Intellij
   include ':android-test'
 }
